# Agent

./: .env  .gitignore  README.md  b.txt  ques.txt  settings.py  test.py
agent/: AGENTS.md  README.md  example_question_generator.py  example_run.py  pyproject.toml
agent/benchforge/: README.md  __init__.py
agent/benchforge/agents/: __init__.py  question_generator.py
agent/benchforge/artifacts/: __init__.py  store.py
agent/benchforge/config/: __init__.py  config.py  qa_agent.yaml  question_generator_config.yaml
agent/benchforge/models/: __init__.py  base.py  fake.py  loader.py  local_client.py  openai_client.py
agent/benchforge/schemas/: __init__.py  core.py  (+4 more)
agent/docs/: QuestionGeneratorAgent_Refactor_Plan.md  benchforge-work-summary.md  benchforge_adaptive_chunk_generation_tech_spec.md  benchforge_adaptive_chunk_generation_tech_spec_v2.md  benchforge_adaptive_chunk_generation_tech_spec_v3.md  benchforge_adaptive_chunk_generation_tech_spec_v4.md  benchforge_mode_staged_generation_tech_spec.md  benchforge_mode_staged_generation_tech_spec_zh.md  benchforge_reference_mapping_for_claude_code.md  complete-agent-refactor-plan.md  controlled-agent-final-plan.md  controlled-agent-implementation-plan.md  controlled-agent-revised-plan.md  pipeline-to-agent-refactor.md  question-generator-usage.md  question_generator_agent_execution_plan.md  refactor-plan-evaluation.md  tool-complete-checklist.md  true-agent-complete-design.md
agent/runs/: generation_report.json
agent/runs_副本/: accepted_questions.jsonl  decision_trace.jsonl  generation_report.json  topic_states.json
(+126 files in other folders)
